--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </nav>
   <!-- 主视觉区 -->
   <header class="container my-5 text-center">
-    <h1>我的项目名称</h1>
+    <h1>PCIL-MVP</h1>
     <p class="lead">这里是项目的简要介绍，可以突出创新点和应用场景。</p>
     <br><br>
     <img src="images/main_demo.png" alt="项目主图" class="img-fluid" style="max-width:600px;">
@@ -56,4 +56,5 @@
   </footer>
 </body>
 </html>
+
 
