--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <h1>PCIL-MVP</h1>
     <p class="lead">这里是项目的简要介绍，可以突出创新点和应用场景。</p>
     <br><br>
-    <img src="images/main_demo.png" alt="项目主图" class="img-fluid" style="max-width:600px;">
+    <img src="images/Figure2.png" alt="项目主图" class="img-fluid" style="max-width:600px;">
   </header>
   <!-- 项目介绍 -->
   <section id="intro" class="container my-5">
@@ -56,5 +56,6 @@
   </footer>
 </body>
 </html>
+
 
 
