--- a/index.html
+++ b/index.html
@@ -24,14 +24,15 @@
   <!-- 主视觉区 -->
   <header class="container my-5 text-center">
     <h1>PCIL-MVP</h1>
-    <p class="lead">这里是项目的简要介绍，可以突出创新点和应用场景。</p>
+    <p class="lead">Yuhao Wang</p>
     <br><br>
     <img src="images/Figure2.png" alt="Architecture of AVS" class="img-fluid" style="max-width:600px;">
   </header>
   <!-- 项目介绍 -->
   <section id="intro" class="container my-5">
-    <h2>项目介绍</h2>
+    <h2>Active environment perception</h2>
     <p>详细介绍你的项目背景、目标、创新点等。</p>
+    <img src="images/Figure3.png" alt="Architecture of AEP" class="img-fluid" style="max-width:600px;">
   </section>
   <!-- 方法 -->
   <section id="method" class="container my-5">
@@ -56,6 +57,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
