--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
   <!-- PCIL-MVP -->
   <section id="intro" class="container my-5">
     <h2>Active Environment Perception</h2>
-    <p>详细介绍你的项目背景、目标、创新点等。</p>
     <img src="images/Figure3.png" alt="Architecture of AEP" class="img-fluid" style="max-width:600px;">
+    <p>详细介绍你的项目背景、目标、创新点等。</p>
   </section>
   <!-- 方法 -->
   <section id="method" class="container my-5">
     <h2>Active Object Search</h2>
-    <img src="images/Figure5.png" alt="方法流程图" class="img-fluid mb-3">
+     <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid" style="max-width:600px;">
     <p>用图文说明你的方法原理和实现细节。</p>
   </section>
   <!-- 结果 -->
@@ -57,6 +57,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
