--- a/index.html
+++ b/index.html
@@ -37,13 +37,18 @@
   <!-- 方法 -->
   <section id="method" class="container my-5">
     <h2>Active Object Search</h2>
-     <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid" style="max-width:600px;">
+     <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid" style="max-width:300px;">
     <p>用图文说明你的方法原理和实现细节。</p>
   </section>
   <!-- 结果 -->
   <section id="results" class="container my-5">
     <h2>实验结果</h2>
-    <img src="images/results.png" alt="实验结果图" class="img-fluid mb-3">
+    <img src="images/Home_008_1_12.gif" alt="实验结果图" class="img-fluid mb-3">
+    <img src="images/Home_011_1_6.gif" alt="实验结果图" class="img-fluid mb-3">
+    <img src="images/Home_013_1_6.gif" alt="实验结果图" class="img-fluid mb-3">
+    <img src="images/Home_014_2_0.gif" alt="实验结果图" class="img-fluid mb-3">
+    <img src="images/Home_015_1_5.gif" alt="实验结果图" class="img-fluid mb-3">
+    <img src="images/Home_016_1_27.gif" alt="实验结果图" class="img-fluid mb-3">
     <p>展示实验结果、对比分析等。</p>
   </section>
   <!-- 联系方式 -->
@@ -57,6 +62,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
