--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
   <!-- 结果 -->
   <section id="results" class="container my-5">
     <h2>Examples</h2>
-    <img src="images/Home_008_1_12.gif" alt="Example1" class="img-fluid mb-3">
-    <img src="images/Home_011_1_6.gif" alt="Example2" class="img-fluid mb-3">
-    <img src="images/Home_013_1_6.gif" alt="Example3" class="img-fluid mb-3">
-    <img src="images/Home_014_2_0.gif" alt="Example4" class="img-fluid mb-3">
-    <img src="images/Home_015_1_5.gif" alt="Example5" class="img-fluid mb-3">
-    <img src="images/Home_016_1_27.gif" alt="Example6" class="img-fluid mb-3">
+    <img src="images/Home_008_1_12.gif" alt="Example1" class="img-fluid mb-3 style="max-width:300px;">
+    <img src="images/Home_011_1_6.gif" alt="Example2" class="img-fluid mb-3 style="max-width:300px;">
+    <img src="images/Home_013_1_6.gif" alt="Example3" class="img-fluid mb-3 style="max-width:300px;">
+    <img src="images/Home_014_2_0.gif" alt="Example4" class="img-fluid mb-3 style="max-width:300px;">
+    <img src="images/Home_015_1_5.gif" alt="Example5" class="img-fluid mb-3 style="max-width:300px;">
+    <img src="images/Home_016_1_27.gif" alt="Example6" class="img-fluid mb-3 style="max-width:300px;">
     <p>展示实验结果、对比分析等。</p>
   </section>
   <!-- 联系方式 -->
@@ -62,6 +62,7 @@
   </footer>
 </body>
 </html>
+
 
 
 
