--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- 主视觉区 -->
   <header class="container my-5 text-center">
     <h1>PCIL-MVP</h1>
-    <p class="lead">Yuhao Wang</p>
+    <p class="lead">Yuhao Wang, Guohui Tian</p>
     <br><br>
     <img src="images/Figure2.png" alt="Architecture of AVS" class="img-fluid" style="max-width:600px;">
   </header>
@@ -58,10 +58,11 @@
   </section>
   <!-- 页脚 -->
   <footer class="bg-light text-center py-3">
-    &copy; 2025 你的名字或团队
+    &copy; 2025 Yuhao Wang
   </footer>
 </body>
 </html>
+
 
 
 
