--- a/index.html
+++ b/index.html
@@ -7,20 +7,6 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body>
-  <!-- 导航栏 -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">项目名称</a>
-      <div class="collapse navbar-collapse">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="#intro">介绍</a></li>
-          <li class="nav-item"><a class="nav-link" href="#method">方法</a></li>
-          <li class="nav-item"><a class="nav-link" href="#results">结果</a></li>
-          <li class="nav-item"><a class="nav-link" href="#contact">联系</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
   <!-- 主视觉区 -->
   <header class="container my-5 text-center">
     <h1>PCIL-MVP</h1>
@@ -37,18 +23,18 @@
   <!-- 方法 -->
   <section id="method" class="container my-5">
     <h2>Active Object Search</h2>
-     <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid" style="max-width:300px;">
+    <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid" style="max-width:300px;">
     <p>用图文说明你的方法原理和实现细节。</p>
   </section>
   <!-- 结果 -->
   <section id="results" class="container my-5">
     <h2>Examples</h2>
-    <img src="images/Home_008_1_12.gif" alt="Example1" class="img-fluid mb-3 style="max-width:300px;">
-    <img src="images/Home_011_1_6.gif" alt="Example2" class="img-fluid mb-3 style="max-width:300px;">
-    <img src="images/Home_013_1_6.gif" alt="Example3" class="img-fluid mb-3 style="max-width:300px;">
-    <img src="images/Home_014_2_0.gif" alt="Example4" class="img-fluid mb-3 style="max-width:300px;">
-    <img src="images/Home_015_1_5.gif" alt="Example5" class="img-fluid mb-3 style="max-width:300px;">
-    <img src="images/Home_016_1_27.gif" alt="Example6" class="img-fluid mb-3 style="max-width:300px;">
+    <img src="images/Home_008_1_12.gif" alt="Example1" class="img-fluid mb-3" style="max-width:300px;">
+    <img src="images/Home_011_1_6.gif" alt="Example2" class="img-fluid mb-3" style="max-width:300px;">
+    <img src="images/Home_013_1_6.gif" alt="Example3" class="img-fluid mb-3" style="max-width:300px;">
+    <img src="images/Home_014_2_0.gif" alt="Example4" class="img-fluid mb-3" style="max-width:300px;">
+    <img src="images/Home_015_1_5.gif" alt="Example5" class="img-fluid mb-3" style="max-width:300px;">
+    <img src="images/Home_016_1_27.gif" alt="Example6" class="img-fluid mb-3" style="max-width:300px;">
     <p>展示实验结果、对比分析等。</p>
   </section>
   <!-- 联系方式 -->
@@ -58,19 +44,10 @@
   </section>
   <!-- 页脚 -->
   <footer class="bg-light text-center py-3">
-    &copy; 2025 Yuhao Wang
+    &copy; 2025 Yuhao Wang<br>
+    This website is licensed under a
+    <a rel="license"
+       href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.
   </footer>
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
