--- a/index.html
+++ b/index.html
@@ -9,38 +9,33 @@
 <body>
   <!-- 主视觉区 -->
   <header class="container my-5 text-center">
-    <h1>PCIL-MVP</h1>
+    <h1>PCIL-MVP: Perturbation Contrastive Imitation Learning with Multimodal Visual Perception for Active Visual Search</h1>
     <p class="lead">Yuhao Wang, Guohui Tian</p>
     <br><br>
-    <img src="images/Figure2.png" alt="Architecture of AVS" class="img-fluid" style="max-width:600px;">
+    <img src="images/Figure2.png" alt="Architecture of AVS" class="img-fluid d-block mx-auto" style="max-width:600px;">
   </header>
   <!-- PCIL-MVP -->
   <section id="intro" class="container my-5">
     <h2>Active Environment Perception</h2>
-    <img src="images/Figure3.png" alt="Architecture of AEP" class="img-fluid" style="max-width:600px;">
+    <img src="images/Figure3.png" alt="Architecture of AEP" class="img-fluid d-block mx-auto" style="max-width:600px;">
     <p>详细介绍你的项目背景、目标、创新点等。</p>
   </section>
   <!-- 方法 -->
   <section id="method" class="container my-5">
     <h2>Active Object Search</h2>
-    <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid" style="max-width:300px;">
+    <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid d-block mx-auto" style="max-width:300px;">
     <p>用图文说明你的方法原理和实现细节。</p>
   </section>
   <!-- 结果 -->
   <section id="results" class="container my-5">
     <h2>Examples</h2>
-    <img src="images/Home_008_1_12.gif" alt="Example1" class="img-fluid mb-3" style="max-width:500px;">
-    <img src="images/Home_011_1_6.gif" alt="Example2" class="img-fluid mb-3" style="max-width:500px;">
-    <img src="images/Home_013_1_6.gif" alt="Example3" class="img-fluid mb-3" style="max-width:500px;">
-    <img src="images/Home_014_2_0.gif" alt="Example4" class="img-fluid mb-3" style="max-width:500px;">
-    <img src="images/Home_015_1_5.gif" alt="Example5" class="img-fluid mb-3" style="max-width:500px;">
-    <img src="images/Home_016_1_27.gif" alt="Example6" class="img-fluid mb-3" style="max-width:500px;">
+    <img src="images/Home_008_1_12.gif" alt="Example1" class="img-fluid mb-3 d-block mx-auto" style="max-width:500px;">
+    <img src="images/Home_011_1_6.gif" alt="Example2" class="img-fluid mb-3 d-block mx-auto" style="max-width:500px;">
+    <img src="images/Home_013_1_6.gif" alt="Example3" class="img-fluid mb-3 d-block mx-auto" style="max-width:500px;">
+    <img src="images/Home_014_2_0.gif" alt="Example4" class="img-fluid mb-3 d-block mx-auto" style="max-width:500px;">
+    <img src="images/Home_015_1_5.gif" alt="Example5" class="img-fluid mb-3 d-block mx-auto" style="max-width:500px;">
+    <img src="images/Home_016_1_27.gif" alt="Example6" class="img-fluid mb-3 d-block mx-auto" style="max-width:500px;">
     <p>展示实验结果、对比分析等。</p>
-  </section>
-  <!-- 联系方式 -->
-  <section id="contact" class="container my-5">
-    <h2>联系方式</h2>
-    <p>你的邮箱、联系方式等。</p>
   </section>
   <!-- 页脚 -->
   <footer class="bg-light text-center py-3">
@@ -51,4 +46,3 @@
   </footer>
 </body>
 </html>
-
