--- a/index.html
+++ b/index.html
@@ -22,17 +22,31 @@
   <!-- 方法 -->
   <section id="method" class="container my-5">
     <h2 class="text-center">Active Object Search</h2>
-    <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid d-block mx-auto" style="max-width:300px;">
+    <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid d-block mx-auto" style="max-width:600px;">
   </section>
   <!-- 结果 -->
   <section id="results" class="container my-5">
     <h2 class="text-center">Examples</h2>
-    <img src="images/Home_008_1_12.gif" alt="Example1" class="img-fluid mb-3 d-block mx-auto" style="max-width:300px;">
-    <img src="images/Home_011_1_6.gif" alt="Example2" class="img-fluid mb-3 d-block mx-auto" style="max-width:300px;">
-    <img src="images/Home_013_1_6.gif" alt="Example3" class="img-fluid mb-3 d-block mx-auto" style="max-width:300px;">
-    <img src="images/Home_014_2_0.gif" alt="Example4" class="img-fluid mb-3 d-block mx-auto" style="max-width:300px;">
-    <img src="images/Home_015_1_5.gif" alt="Example5" class="img-fluid mb-3 d-block mx-auto" style="max-width:300px;">
-    <img src="images/Home_016_1_27.gif" alt="Example6" class="img-fluid mb-3 d-block mx-auto" style="max-width:300px;">
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-6 mb-3 text-center">
+        <img src="images/Home_008_1_12.gif" alt="Example1" class="img-fluid" style="max-width:300px;">
+      </div>
+      <div class="col-12 col-md-6 mb-3 text-center">
+        <img src="images/Home_011_1_6.gif" alt="Example2" class="img-fluid" style="max-width:300px;">
+      </div>
+      <div class="col-12 col-md-6 mb-3 text-center">
+        <img src="images/Home_013_1_6.gif" alt="Example3" class="img-fluid" style="max-width:300px;">
+      </div>
+      <div class="col-12 col-md-6 mb-3 text-center">
+        <img src="images/Home_014_2_0.gif" alt="Example4" class="img-fluid" style="max-width:300px;">
+      </div>
+      <div class="col-12 col-md-6 mb-3 text-center">
+        <img src="images/Home_015_1_5.gif" alt="Example5" class="img-fluid" style="max-width:300px;">
+      </div>
+      <div class="col-12 col-md-6 mb-3 text-center">
+        <img src="images/Home_016_1_27.gif" alt="Example6" class="img-fluid" style="max-width:300px;">
+      </div>
+    </div>
   </section>
   <!-- 页脚 -->
   <footer class="bg-light text-center py-3">
