--- a/index.html
+++ b/index.html
@@ -24,7 +24,65 @@
     <h2 class="text-center">Active Object Search</h2>
     <img src="images/Figure5.png" alt="Architecture of AOS" class="img-fluid d-block mx-auto" style="max-width:500px;">
   </section>
-  <!-- 结果 -->
+  <!-- Environments in AVDB -->
+  <section id="environments" class="container my-5">
+    <h2 class="text-center">Environments in AVDB</h2>
+    <!-- 图片行 -->
+    <div class="row mb-3 justify-content-center">
+      <div class="col-2 text-center">
+        <img src="Environments/Home_001_2.png" alt="Env 1" class="img-fluid" style="max-width:120px;">
+        <div>1</div>
+      </div>
+      <div class="col-2 text-center">
+        <img src="Environments/Home_004_2.png" alt="Env 2" class="img-fluid" style="max-width:120px;">
+        <div>2</div>
+      </div>
+      <div class="col-2 text-center">
+        <img src="Environments/Home_005_1.png" alt="Env 3" class="img-fluid" style="max-width:120px;">
+        <div>3</div>
+      </div>
+      <div class="col-2 text-center">
+        <img src="Environments/Home_008_1.png" alt="Env 4" class="img-fluid" style="max-width:120px;">
+        <div>4</div>
+      </div>
+      <div class="col-2 text-center">
+        <img src="Environments/Home_013_1.png" alt="Env 5" class="img-fluid" style="max-width:120px;">
+        <div>5</div>
+      </div>
+      <div class="col-2 text-center">
+        <img src="Environments/Home_015_1.png" alt="Env 6" class="img-fluid" style="max-width:120px;">
+        <div>6</div>
+      </div>
+    </div>
+    <!-- 视频行 -->
+    <div class="row justify-content-center">
+      <div class="col-2 text-center">
+        <video src="Environments/Home_001_2.mp4" controls class="img-fluid" style="max-width:120px;"></video>
+        <div>1</div>
+      </div>
+      <div class="col-2 text-center">
+        <video src="Environments/Home_004_2.mp4" controls class="img-fluid" style="max-width:120px;"></video>
+        <div>2</div>
+      </div>
+      <div class="col-2 text-center">
+        <video src="Environments/Home_005_1.mp4" controls class="img-fluid" style="max-width:120px;"></video>
+        <div>3</div>
+      </div>
+      <div class="col-2 text-center">
+        <video src="Environments/Home_008_1.mp4" controls class="img-fluid" style="max-width:120px;"></video>
+        <div>4</div>
+      </div>
+      <div class="col-2 text-center">
+        <video src="Environments/Home_013_1.mp4" controls class="img-fluid" style="max-width:120px;"></video>
+        <div>5</div>
+      </div>
+      <div class="col-2 text-center">
+        <video src="Environments/Home_015_1.mp4" controls class="img-fluid" style="max-width:120px;"></video>
+        <div>6</div>
+      </div>
+    </div>
+  </section>
+  <!-- Examples -->
   <section id="results" class="container my-5">
     <h2 class="text-center">Examples</h2>
     <div class="row justify-content-center">
