--- a/index.html
+++ b/index.html
@@ -58,27 +58,27 @@
     <div class="row justify-content-center">
       <div class="col-2 text-center">
         <video src="Environments/Home_001_2.mp4" controls class="img-fluid" style="max-width:120px;"></video>
-        <div>1</div>
+        <div>Home_001_2</div>
       </div>
       <div class="col-2 text-center">
         <video src="Environments/Home_004_2.mp4" controls class="img-fluid" style="max-width:120px;"></video>
-        <div>2</div>
+        <div>Home_004_2</div>
       </div>
       <div class="col-2 text-center">
         <video src="Environments/Home_005_1.mp4" controls class="img-fluid" style="max-width:120px;"></video>
-        <div>3</div>
+        <div>Home_005_1</div>
       </div>
       <div class="col-2 text-center">
         <video src="Environments/Home_008_1.mp4" controls class="img-fluid" style="max-width:120px;"></video>
-        <div>4</div>
+        <div>Home_008_1</div>
       </div>
       <div class="col-2 text-center">
         <video src="Environments/Home_013_1.mp4" controls class="img-fluid" style="max-width:120px;"></video>
-        <div>5</div>
+        <div>Home_013_1</div>
       </div>
       <div class="col-2 text-center">
         <video src="Environments/Home_015_1.mp4" controls class="img-fluid" style="max-width:120px;"></video>
-        <div>6</div>
+        <div>Home_015_1</div>
       </div>
     </div>
   </section>
@@ -115,3 +115,4 @@
   </footer>
 </body>
 </html>
+
