--- a/index.html
+++ b/index.html
@@ -14,6 +14,16 @@
     <br><br>
     <img src="images/Figure2.png" alt="Architecture of AVS" class="img-fluid d-block mx-auto" style="max-width:600px;">
   </header>
+  <!-- Abstract -->
+<section id="abstract" class="container my-5">
+  <h2 class="text-center">Abstract</h2>
+  <div class="mt-3" style="max-width:900px; margin:auto; font-size:1.1em;">
+    Active visual search (AVS) poses significant challenges for autonomous agents in unseen environments with only egocentric RGB-D observations. To address target recognition, semantic understanding, and localization under occlusions and uncertain layouts, we propose a multi-modal feature fusion framework for ground projection. Our method integrates RGB, semantic segmentation, and object detection features into a unified allocentric grid map, leveraging CLIP-based vision-language models and cross-attention mechanisms for semantic alignment. Reliable localization is ensured through a hybrid confidence estimation strategy that combines statistical analysis with learned predictions, enabling uncertainty-aware navigation decisions. Temporal dependencies are modeled via a Transformer-based multi-frame fusion module to enable resilient and coherent map updates in dynamic environments. Furthermore, we introduce a contrastive imitation learning paradigm incorporating adaptive sampling and perturbed trajectory augmentation to improve policy robustness and generalization. Extensive experiments show that our system outperforms baseline methods on visual localization and search tasks.
+  </div>
+</section>
+
+  
+   
   <!-- PCIL-MVP -->
   <section id="intro" class="container my-5">
     <h2 class="text-center">Active Environment Perception</h2>
@@ -115,4 +125,5 @@
   </footer>
 </body>
 </html>
+
 
