--- a/index.html
+++ b/index.html
@@ -41,27 +41,27 @@
     <div class="row mb-3 justify-content-center">
       <div class="col-2 text-center">
         <img src="Environments/Home_001_2.png" alt="Env 1" class="img-fluid" style="max-width:120px;">
-        <div>1</div>
+        <div>Home_001_2</div>
       </div>
       <div class="col-2 text-center">
         <img src="Environments/Home_004_2.png" alt="Env 2" class="img-fluid" style="max-width:120px;">
-        <div>2</div>
+        <div>Home_004_2</div>
       </div>
       <div class="col-2 text-center">
         <img src="Environments/Home_005_1.png" alt="Env 3" class="img-fluid" style="max-width:120px;">
-        <div>3</div>
+        <div>Home_005_1</div>
       </div>
       <div class="col-2 text-center">
         <img src="Environments/Home_008_1.png" alt="Env 4" class="img-fluid" style="max-width:120px;">
-        <div>4</div>
+        <div>Home_008_1</div>
       </div>
       <div class="col-2 text-center">
         <img src="Environments/Home_013_1.png" alt="Env 5" class="img-fluid" style="max-width:120px;">
-        <div>5</div>
+        <div>Home_013_1</div>
       </div>
       <div class="col-2 text-center">
         <img src="Environments/Home_015_1.png" alt="Env 6" class="img-fluid" style="max-width:120px;">
-        <div>6</div>
+        <div>Home_015_1</div>
       </div>
     </div>
     <!-- 视频行 -->
@@ -125,5 +125,6 @@
   </footer>
 </body>
 </html>
+
 
 
