--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
       </div>
     </div>
   </section>
+  <!-- Code -->
+  <section id="code" class="container my-5">
+    <h2 class="text-center">Code</h2>
+    <div class="mt-3 text-center" style="font-size:1.1em;">
+      We have released the training and model code for peer review.
+    </div>
+  </section>
   <!-- 页脚 -->
   <footer class="bg-light text-center py-3">
     &copy; 2025 Yuhao Wang<br>
@@ -126,6 +133,7 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
   </footer>
 </body>
 </html>
+
 
 
 
