--- a/index.html
+++ b/index.html
@@ -2079,10 +2079,13 @@ if __name__ == '__main__':
         </div>
       </div>
     </div>
+
+
+          
     <!-- code5.py -->
     <div class="col-12 col-md-6 mb-4">
       <div class="card">
-        <div class="card-header">code5.py</div>
+        <div class="card-header">dataloader_perturbation_contrast.py</div>
         <div class="card-body" style="max-height:400px; overflow:auto; font-family:monospace; background:#f8f9fa;">
 <pre>
 # 这里放你的第五份代码
@@ -2091,6 +2094,23 @@ if __name__ == '__main__':
       </div>
     </div>
   </div>
+
+
+  <!-- code6.py -->
+    <div class="col-12 col-md-6 mb-4">
+      <div class="card">
+        <div class="card-header">test_NavNet.py</div>
+        <div class="card-body" style="max-height:400px; overflow:auto; font-family:monospace; background:#f8f9fa;">
+<pre>
+# 这里放你的第六份代码
+</pre>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+          
 </section>
 
   <!-- 页脚 -->
@@ -2102,6 +2122,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
