--- a/index.html
+++ b/index.html
@@ -68,27 +68,45 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
     <!-- 视频行 -->
     <div class="row justify-content-center">
       <div class="col-2 text-center">
-        <video src="Environments/Home_001_2.mp4" controls class="img-fluid" style="max-width:200px;"></video>
+        <video controls class="img-fluid" style="max-width:200px;" preload="metadata">
+          <source src="Environments/Home_001_2.mp4" type="video/mp4">
+          您的浏览器不支持视频播放
+        </video>
         <div>Home_001_2</div>
       </div>
       <div class="col-2 text-center">
-        <video src="Environments/Home_004_2.mp4" controls class="img-fluid" style="max-width:200px;"></video>
+        <video controls class="img-fluid" style="max-width:200px;" preload="metadata">
+          <source src="Environments/Home_004_2.mp4" type="video/mp4">
+          您的浏览器不支持视频播放
+        </video>
         <div>Home_004_2</div>
       </div>
       <div class="col-2 text-center">
-        <video src="Environments/Home_005_1.mp4" controls class="img-fluid" style="max-width:200px;"></video>
+        <video controls class="img-fluid" style="max-width:200px;" preload="metadata">
+          <source src="Environments/Home_005_1.mp4" type="video/mp4">
+          您的浏览器不支持视频播放
+        </video>
         <div>Home_005_1</div>
       </div>
       <div class="col-2 text-center">
-        <video src="Environments/Home_008_1.mp4" controls class="img-fluid" style="max-width:200px;"></video>
+        <video controls class="img-fluid" style="max-width:200px;" preload="metadata">
+          <source src="Environments/Home_008_1.mp4" type="video/mp4">
+          您的浏览器不支持视频播放
+        </video>
         <div>Home_008_1</div>
       </div>
       <div class="col-2 text-center">
-        <video src="Environments/Home_013_1.mp4" controls class="img-fluid" style="max-width:200px;"></video>
+        <video controls class="img-fluid" style="max-width:200px;" preload="metadata">
+          <source src="Environments/Home_013_1.mp4" type="video/mp4">
+          您的浏览器不支持视频播放
+        </video>
         <div>Home_013_1</div>
       </div>
       <div class="col-2 text-center">
-        <video src="Environments/Home_015_1.mp4" controls class="img-fluid" style="max-width:200px;"></video>
+        <video controls class="img-fluid" style="max-width:200px;" preload="metadata">
+          <source src="Environments/Home_015_1.mp4" type="video/mp4">
+          您的浏览器不支持视频播放
+        </video>
         <div>Home_015_1</div>
       </div>
     </div>
@@ -2959,6 +2977,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
