--- a/index.html
+++ b/index.html
@@ -1521,8 +1521,6 @@ class Encoder(nn.Module):
         <div class="card-header">train_AOS.py</div>
         <div class="card-body" style="max-height:400px; overflow:auto; font-family:monospace; background:#f8f9fa;">
 <pre>
-
-
 """
 Navigation network training with perturbation contrast learning.
 Combines behavioral cloning with contrastive learning using trajectory perturbations.
@@ -2134,10 +2132,9 @@ if __name__ == '__main__':
     <!-- code5.py -->
     <div class="col-12 col-md-6 mb-4">
       <div class="card">
-        <div class="card-header">Trajectory_perturbation.py</div>
+        <div class="card-header">Trajectory_Perturbation.py</div>
         <div class="card-body" style="max-height:400px; overflow:auto; font-family:monospace; background:#f8f9fa;">
 <pre>
-
 """
 AVD dataset loader with trajectory perturbation and contrastive learning.
 Generates original and perturbed trajectory pairs for contrastive learning.
@@ -2939,6 +2936,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
