--- a/index.html
+++ b/index.html
@@ -1299,7 +1299,7 @@ if __name__ == '__main__':
         <div class="card-body" style="max-height:400px; overflow:auto; font-family:monospace; background:#f8f9fa;">
 <pre>
 """
-Imitation Learning Network for Navigation
+Imitation Learning Network for Navigation.
 Contains ILNet for action prediction and Encoder for egocentric observation feature extraction.
 """
 
@@ -2936,6 +2936,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
