--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
 <section id="code" class="container my-5">
   <h2 class="text-center">Code</h2>
   <div class="mt-3 text-center" style="font-size:1.1em;">
-    We release the training and model code for peer review.
+    Model files and training scripts are provided.
+	*The complete source code will be released upon acceptance of the manuscript.*
   </div>
   <div class="row mt-4 justify-content-center">
     <!-- 示例：五个代码文件 -->
@@ -2936,6 +2937,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
