--- a/index.html
+++ b/index.html
@@ -139,9 +139,11 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
 <section id="code" class="container my-5">
   <h2 class="text-center">Code</h2>
   <div class="mt-3 text-center" style="font-size:1.1em;">
-    Model files and training scripts are provided.
+	<p>Please follow the instructions in https://github.com/ggeorgak11/mapping_navigation to set up the environment and download the required data files.</p>
+
+    <p>Model files and training scripts are provided.</p>
 	  
-	*The complete source code will be released upon acceptance of the manuscript.*
+	<p>*The complete source code will be released upon acceptance of the manuscript.*</p>
   </div>
   <div class="row mt-4 justify-content-center">
     <!-- 示例：五个代码文件 -->
@@ -2938,6 +2940,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
