--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
 	<p>Please follow the instructions in https://github.com/ggeorgak11/mapping_navigation to set up the environment and download the required data files.</p>
 
     <p>Model files and training scripts are provided.</p>
+
+	<p>To train the AEP module, execute train_AEP.py directly.</p>
+
+    <p>For the AOS module, use train_AOS.py to start training and test_AOS.py to perform testing.</p>
 	  
 	<p>*The complete source code will be released upon acceptance of the manuscript.*</p>
   </div>
@@ -2940,6 +2944,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
