--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
 
     <p>For the AOS module, use train_AOS.py to start training and test_AOS.py to perform testing.</p>
 	  
-	<p>*The complete source code will be released upon acceptance of the manuscript.*</p>
+	<p>Due to the large volume and complexity of the source code files, the complete codebase will be made available after the manuscript is accepted. 
+	We will ensure all necessary scripts and documentation are provided for reproducibility and ease of use.</p>
   </div>
   <div class="row mt-4 justify-content-center">
     <!-- 示例：五个代码文件 -->
@@ -2944,6 +2945,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
