--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
 <section id="code" class="container my-5">
   <h2 class="text-center">Code</h2>
   <div class="mt-3 text-center" style="font-size:1.1em;">
-	<p>Please follow the instructions in https://github.com/ggeorgak11/mapping_navigation to set up the environment and download the required data files.</p>
+	<p>Please follow the instructions in <a href="https://github.com/ggeorgak11/mapping_navigation" target="_blank">https://github.com/ggeorgak11/mapping_navigation</a> to set up the environment and download the required data files.</p>
 
     <p>Model files and training scripts are provided.</p>
 
@@ -2945,6 +2945,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
