--- a/index.html
+++ b/index.html
@@ -139,16 +139,12 @@ Active visual search (AVS) presents substantial challenges for autonomous agents
 <section id="code" class="container my-5">
   <h2 class="text-center">Code</h2>
   <div class="mt-3 text-center" style="font-size:1.1em;">
-	<p>Please follow the instructions in <a href="https://github.com/ggeorgak11/mapping_navigation" target="_blank">https://github.com/ggeorgak11/mapping_navigation</a> to set up the environment and download the required data files.</p>
+	<p>1. Please follow the instructions in <a href="https://github.com/ggeorgak11/mapping_navigation" target="_blank">https://github.com/ggeorgak11/mapping_navigation</a> to set up the environment and download the required data files.</p>
 
-    <p>Model files and training scripts are provided.</p>
+    <p>2. Model files and training scripts are provided. To train the AEP module, execute train_AEP.py directly. For the AOS module, use train_AOS.py to start training and test_AOS.py to perform testing.</p>
 
-	<p>To train the AEP module, execute train_AEP.py directly.</p>
-
-    <p>For the AOS module, use train_AOS.py to start training and test_AOS.py to perform testing.</p>
 	  
-	<p>Due to the large volume and complexity of the source code files, the complete codebase will be made available after the manuscript is accepted. 
-	We will ensure all necessary scripts and documentation are provided for reproducibility and ease of use.</p>
+	<p>3. Due to the large volume and complexity of the source code files, the complete codebase will be made available after the manuscript is accepted. We will ensure all necessary scripts and documentation are provided for reproducibility and ease of use.</p>
   </div>
   <div class="row mt-4 justify-content-center">
     <!-- 示例：五个代码文件 -->
@@ -2945,6 +2941,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
