--- a/index.html
+++ b/index.html
@@ -2932,6 +2932,14 @@ if __name__ == '__main__':
           
 </section>
 
+
+
+  <!-- Real1 -->
+  <section id="intro" class="container my-5">
+    <h2 class="text-center">Run our model</h2>
+    <img src="images/Figure3.png" alt="Run our model" class="img-fluid d-block mx-auto" style="max-width:900px;">
+  </section>
+
   <!-- 页脚 -->
   <footer class="bg-light text-center py-3">
     &copy; 2025 Yuhao Wang<br>
@@ -2941,6 +2949,7 @@ if __name__ == '__main__':
   </footer>
 </body>
 </html>
+
 
 
 
